--- a/templates/pre_report.tex
+++ b/templates/pre_report.tex
@@ -1,5 +1,5 @@
 \hypertarget{about-cyfrin}{%
-\section{About Cyfrin}\label{about-cyfrin}}
+\section{About 0xSimao}\label{about-cyfrin}}
 
 \input{about_cyfrin.tex}
 
