--- a/templates/summary.tex
+++ b/templates/summary.tex
@@ -16,7 +16,7 @@
 \section{Executive Summary}\label{executive-summary}}
 
 % FIXME -> PLACEHOLDERS are replace for the information in "./source/summary-information.conf"
-Over the course of __PLACEHOLDER__REVIEW_LENGTH days, the Cyfrin team conducted an audit on the
+Over the course of __PLACEHOLDER__REVIEW_LENGTH days, 0xSimao conducted an audit on the
 \href{__PLACEHOLDER__REPO_LINK}{__PLACEHOLDER__PROJECT_NAME}
 smart contracts provided by
 \href{__PLACEHOLDER__TEAM_WEBSITE}{__PLACEHOLDER__TEAM_NAME}.
@@ -119,6 +119,7 @@ In this period, a total of __PLACEHOLDER__ISSUE_TOTAL_COUNT issues were found.
 \begin{longtable}{|p{12cm}|p{3cm}|}
   \caption*{\textbf{Summary of Findings}}
   % __PLACEHOLDER__SUMMARY_OF_FINDINGS_START
-    __PLACEHOLDER__SUMMARY_OF_FINDINGS
-  % __PLACEHOLDER__SUMMARY_OF_FINDINGS_END
+\hline\hyperlink{}{[M-1] Found stuff} & Closed \\
+\hline
+% __PLACEHOLDER__SUMMARY_OF_FINDINGS_END
 \end{longtable}
