--- a/templates/title.tex
+++ b/templates/title.tex
@@ -6,7 +6,7 @@
   \vbox to 1cm{\vfill}
 
   \begin{center}    
-    \includegraphics[width=\logoWidth]{img/cyfrin-logo.png} % Adjust the graphic size as needed
+    \includegraphics[width=\logoWidth]{img/0xSimao.jpg} % Adjust the graphic size as needed
     
     \vspace{1cm}
 
@@ -20,7 +20,7 @@
     \noindent\makebox[\linewidth]{\rule{.75\paperwidth}{.6pt}}\\[0.7cm]
 
     \large
-    Prepared by \href{https://cyfrin.io}{Cyfrin}
+    Prepared by \href{https://www.0xsimao.com/}{0xSimao}
 
     \large{
       Version __PLACEHOLDER__REPORT_VERSION
@@ -29,12 +29,12 @@
     \vfill
 
     % Who are the lead auditors:
-    \large
-    {\bfseries Lead Auditors}\\
+    % \large
+    % {\bfseries Lead Auditors}\\
 
-    \vspace{0.2cm}
-    \input{lead_auditors.tex}\\
-    \vspace{1cm}
+    % \vspace{0.2cm}
+    % \input{lead_auditors.tex}\\
+    % \vspace{1cm}
 
 
     % Who are the assisting auditors:
