--- a/templates/title.tex
+++ b/templates/title.tex
@@ -6,7 +6,7 @@
   \vbox to 1cm{\vfill}
 
   \begin{center}    
-    \includegraphics[width=\logoWidth]{img/0xSimao.jpg} % Adjust the graphic size as needed
+    \includegraphics[width=\logoWidth]{img/logo.png} % Adjust the graphic size as needed
     
     \vspace{1cm}
 
